sample/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wordpress
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: {db_host:3306}
        - name: WORDPRESS_DB_USER
          value: {db_user}
        - name: WORDPRESS_DB_PASSWORD
          value: {db_password}
        - name: foo
          value: bar
        image: registry.cn-hangzhou.aliyuncs.com/knative-sample/wordpress:5.2.1-20190613163354
        imagePullPolicy: Always
        name: wordpress
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
